# django-contentor-video-processor

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
contentor_video_processor/: admin.py  apps.py  context_processor.py  decorators.py  fields.py  files.py  functions.py  models.py  storage.py  urls.py  validators.py  views.py  widgets.py
contentor_video_processor/templates/contentor_video_processor/: admin_file_input.html  user_file_input.html  video_element.html
contentor_video_processor/templatetags/: resolution_filter.py
